	- Make sure the mark is always properly positioned after
	  uncutting one line of text with the mark on. (DLR)
- prompt.c:
  do_yesno_prompt()
	- Remove redundant check for NO_HELP's being FALSE. (DLR)
- search.c:
  do_replace_loop()
	- Fix problem where replacing e.g. single-byte characters with
	  multibyte ones could result in openfile->totsize's being
	  miscalculated. (DLR)
- winio.c:
  get_key_buffer()
	- Fix inaccurate comments. (DLR)
  do_mouseinput()
	- Add mouse wheel support.  Now, if mouse support is enabled,
	  and nano is using a version of ncurses compiled with the
	  --enable-ext-mouse option, rolling the mouse wheel up or down
	  will move the cursor three lines up or down.  Note that
	  ncurses built without --enable-ext-mouse needs to handle both
	  clicks and releases of the first mouse button, but ncurses
	  built with --enable-ext-mouse only needs to handle releases,
	  so keep dealing with both events. (DLR, suggested by Helmut
	  Jarausch)
- configure.ac:
	- Update copyright notice to account for modifications. (DLR)
- doc/faq.html:
	- Update RPM links for nano 2.0.x. (DLR)

GNU nano 2.0.6 - 2007.04.26
- text.c:
  backup_lines()
	- Avoid a segfault when the mark begins and ends on the line
	  after the last line of the paragraph. (DLR)
- TODO:
	- Add entries for fixing limitations with pasting text and
	  handling bad/incomplete UTF-8 sequences. (DLR)

GNU nano 2.0.5 - 2007.04.22
- files.c:
  open_file()
	- Open files using their full paths whenever possible, so that
	  ~user/file.txt and "~user/file.txt" are treated the same way
	  if ~user is a user's home directory. (DLR)
  real_dir_from_tilde()
	- Fix segfault when dealing with directory names that begin with
	  "~", but that aren't users' home directories. (DLR, found by
	  Justin Fletcher)
	- Fix long-standing problem where directory names that began
	  with "~", but that weren't users' home directories, could be
	  erroneously treated as users' home directories (e.g. "~d/"